--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
             <nav id="nav-menu-container">
               <ul class="nav-menu">
                 <li ><a href="index.html">Home</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="">About Us</a></li>
                 <li><a href="">Login</a></li>
                 <li><a href="">Sign Up</a></li>
                 <li class="menu-active"><a href="">Get Solution</a></li>
