Login and Sign Up Design  Added.

--- a/signup.html
+++ b/signup.html
@@ -50,6 +50,48 @@
         <h1>Sign Up</h1>
         </div>
     </section><!-- #call-to-action -->
+    <br>
+      <div class="container">
+          <div id="login-row" class="row justify-content-center align-items-center">
+              <div id="login-column" class="col-md-6">
+                  <div id="login-box" class="col-md-12">
+                      <form id="login-form" class="form" action="" method="post">
+                        <div class="form-group">
+                            <label class="text-info">Full Name:</label><br>
+                            <input type="text" name="fullname" class="form-control">
+                          </div>
+                          <div class="form-group">
+                            <label class="text-info">Address:</label><br>
+                            <input type="text" name="address" class="form-control">
+                          </div>
+                          <div class="form-group">
+                            <label class="text-info">Phone Number:</label><br>
+                            <input type="text" name="phone" class="form-control">
+                           </div>
+                          <div class="form-group">
+                              <label class="text-info">Email:</label><br>
+                              <input type="text" name="email" class="form-control">
+                          </div>
+                          <div class="form-group">
+                              <label class="text-info">Password:</label><br>
+                              <input type="text" name="password" class="form-control">
+                          </div>
+                          <div class="form-group">
+                            <label class="text-info">Confirm Password:</label><br>
+                            <input type="text" name="conpassword" class="form-control">
+                          </div>
+                          <div class="form-group">
+                              <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                          </div>
+                          <div id="login-link" class="text-right">
+                              <a href="login.html" class="text-info">Already had acounts?<strong>Login here</strong></a>
+                          </div>
+                      </form>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <br>
 
 
 </body>  
