--- a/login.html
+++ b/login.html
@@ -68,7 +68,7 @@
                               <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
                           </div>
                           <div id="register-link" class="text-right">
-                              <a href="signup.html" class="text-info">Register here</a>
+                              <a href="signup.html" class="text-info">Don't you have accounts?<Strong>Register here</Strong></a>
                           </div>
                       </form>
                   </div>
