Search Flight design Added.

--- a/where.html
+++ b/where.html
@@ -56,7 +56,7 @@
     	<div class="container">
     		<header class="section-header wow fadeInUp">
           <h3>Get in
-          <span class="text-danger">touch with us.</span></h3>
+          <span class="text-info">touch with us.</span></h3>
             </header>
             <div class="row">
          <div class="col-md-6">
@@ -68,21 +68,21 @@
       <h1 class="userproposal-header">Contact Us</h1>
 				<form action="" method="POST">
 					<div class="form-group">
-					<label>Full Name</label>
+					<label class="text-info">Full Name</label>
 		    		<input type="text" name="name" class="form-control"  placeholder="Please enter your full name" />
                 	</div>
 
 		    		<div class="form-group">
-		    		<label>Email Address</label>
+		    		<label class="text-info">Email Address</label>
 		    		<input type="email" name="email" class="form-control"  placeholder="Please enter your email address" />
                 	</div>
 
 		    		<div class="form-group">
-		    		<label>Message To Us</label>
+		    		<label class="text-info">Message To Us</label>
                   	<textarea name="feedback" cols="40" rows="5" class="form-control" placeholder="Please enter your feedback" ></textarea>
                		 </div>
 
-                  	<button class="btn btn-danger btpro" type="submit" name="button">Send Message</button>
+                  	<button class="btn btn-info btpro" type="submit" name="button">Send Message</button>
 
 				</form>
 			</div>
