--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
               <ul class="nav-menu">
                 <li ><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="">Login</a></li>
-                <li><a href="">Sign Up</a></li>
-                <li><a href="">Get Solution</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="where.html">Get Solution</a></li>
                 
               </ul>
             </nav><!-- #nav-menu-container -->
