--- a/login.html
+++ b/login.html
@@ -55,22 +55,20 @@
           <div id="login-row" class="row justify-content-center align-items-center">
               <div id="login-column" class="col-md-6">
                   <div id="login-box" class="col-md-12">
-                      <form id="login-form" class="form" action="" method="post">
                           <div class="form-group">
                               <label class="text-info">Email:</label><br>
-                              <input type="text" name="email" class="form-control">
+                              <input type="text" id="loginemail" name="loginemail" class="form-control">
                           </div>
                           <div class="form-group">
                               <label class="text-info">Password:</label><br>
-                              <input type="text" name="password" class="form-control">
+                              <input type="text" id="loginpassword" name="loginpassword" class="form-control">
                           </div>
                           <div class="form-group">
-                              <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                              <input type="submit" id="loginsubmit" name="loginsubmit" class="btn btn-info btn-md" value="submit">
                           </div>
                           <div id="register-link" class="text-right">
                               <a href="signup.html" class="text-info">Don't you have accounts?<Strong>Register here</Strong></a>
                           </div>
-                      </form>
                   </div>
               </div>
           </div>
@@ -98,6 +96,7 @@
 
   <!-- Template Main Javascript File -->
   <script src="airline/js/main.js"></script>
+  <script src="js/loginandsignup.js"></script>
     
 </body>
 <footer id="footer">
