Contact us Form Added.

--- a/contactus.html
+++ b/contactus.html
@@ -49,33 +49,30 @@
         </div>
     </section><!-- #call-to-action -->
     <br>
-    <section class="main_page">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="button">
-                <a href="flight/searchflight.html">Search Flight</a>
-              </div>
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <h1 class="userproposal-header">Contact Us</h1>
+				<form action="" method="POST">
+					<div class="form-group">
+					<label class="text-info">Full Name</label>
+		    		<input type="text" name="name" class="form-control"  placeholder="Please enter your full name" />
+                	</div>
+
+		    		<div class="form-group">
+		    		<label class="text-info">Email Address</label>
+		    		<input type="email" name="email" class="form-control"  placeholder="Please enter your email address" />
+                	</div>
+
+		    		<div class="form-group">
+		    		<label class="text-info">Message To Us</label>
+                  	<textarea name="feedback" cols="40" rows="5" class="form-control" placeholder="Please enter your feedback" ></textarea>
+               		 </div>
+
+                  	<button class="btn btn-info btpro" type="submit" name="button">Send Message</button>
+
+				</form>
             </div>
-            <div class="col-md-6">
-              <div class="button">
-                <a href="">Cancel Flight</a>
-              </div>
-            </div>
-          </div>
-            <div class="row">
-            <div class="col-md-6">
-              <div class="button">
-                <a href="contactus.html">Contact/Feedback Form</a>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="button">
-              <a href="">Profile</a>
-            </div>
-            </div>
-            </div>
-      </section>
+            <div class="col-md-2"></div>
       <br>
 
 
