--- a/flight/searchflight.html
+++ b/flight/searchflight.html
@@ -54,24 +54,31 @@
               <div id="login-column" class="col-md-6">
                   <div id="login-box" class="col-md-12">
                       <form id="login-form" class="form" action="" method="post">
-                          <div class="form-group">
-                              <label class="text-info">From:</label><br>
-                              <select>
-                                <option value="volvo">Volvo</option>
-                                <option value="saab">Saab</option>
-                                <option value="opel">Opel</option>
-                                <option value="audi">Audi</option>
-                              </select>
+                          <div class="row">
+                            <div class="col">
+                              <div class="form-group">
+                                <label class="text-info">From:</label><br>
+                                <select>
+                                  <option value="volvo">Volvo</option>
+                                  <option value="saab">Saab</option>
+                                  <option value="opel">Opel</option>
+                                  <option value="audi">Audi</option>
+                                </select>
+                            </div>
+                            
+                            </div>
+                            <div class="col">
+                              <div class="form-group">
+                                <label class="text-info">To:</label><br>
+                                <select>
+                                  <option value="volvo">Volvo</option>
+                                  <option value="saab">Saab</option>
+                                  <option value="opel">Opel</option>
+                                  <option value="audi">Audi</option>
+                                </select>
+                              </div>
+                            </div>
                           </div>
-                          <div class="form-group">
-                            <label class="text-info">To:</label><br>
-                            <select>
-                              <option value="volvo">Volvo</option>
-                              <option value="saab">Saab</option>
-                              <option value="opel">Opel</option>
-                              <option value="audi">Audi</option>
-                            </select>
-                        </div>
                           <div class="form-group">
                               <label class="text-info">Date:</label><br>
                               <input type="date" name="date" class="form-control">
