--- a/where.html
+++ b/where.html
@@ -59,36 +59,48 @@
           <span class="text-info">touch with us.</span></h3>
             </header>
             <div class="row">
-         <div class="col-md-6">
+              <div class="col-md-2"></div>     
+         <div class="col-md-8">
           <h1 class="userproposal-header">Find Us</h1>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d883.3879443125179!2d85.3297864908886!3d27.669336113334133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19dd46459e11%3A0x7d27368bdc243997!2sPatan%20Sundhara%2C%20Lalitpur!5e0!3m2!1sen!2snp!4v1580918250390!5m2!1sen!2snp"
-           width="565" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-		</div>
-		<div class="col-md-6">
-      <h1 class="userproposal-header">Contact Us</h1>
-				<form action="" method="POST">
-					<div class="form-group">
-					<label class="text-info">Full Name</label>
-		    		<input type="text" name="name" class="form-control"  placeholder="Please enter your full name" />
-                	</div>
-
-		    		<div class="form-group">
-		    		<label class="text-info">Email Address</label>
-		    		<input type="email" name="email" class="form-control"  placeholder="Please enter your email address" />
-                	</div>
-
-		    		<div class="form-group">
-		    		<label class="text-info">Message To Us</label>
-                  	<textarea name="feedback" cols="40" rows="5" class="form-control" placeholder="Please enter your feedback" ></textarea>
-               		 </div>
-
-                  	<button class="btn btn-info btpro" type="submit" name="button">Send Message</button>
-
-				</form>
-			</div>
+           width="750" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    </div>
+    <div class="col-md-2"></div>
 		</div>
     </div>
    </section>
+
+   <section id="contact" class="section-bg wow fadeInUp">
+    <div class="container">
+      <div class="row contact-info">
+
+        <div class="col-md-4">
+          <div class="contact-address">
+            <i class="ion-ios-location-outline"></i>
+            <h3>Address</h3>
+            <address>Sundhara,Patan , Nepal</address>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="contact-phone">
+            <i class="ion-ios-telephone-outline"></i>
+            <h3>Phone Number</h3>
+            <p><a href="tel:+977-01-5540168">+977-01-5540168</a> | <a href="tel:+977-9843822800">+977-9843822800</a></p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="contact-email">
+            <i class="ion-ios-email-outline"></i>
+            <h3>Email</h3>
+            <p><a href="mailto:suminamaharjan098@gmail.com">suminamaharjan098@gmail.com</a></p>
+          </div>
+        </div>
+
+      </div>
+      </div>
+      </section>
 
 
 
