--- a/contactus.html
+++ b/contactus.html
@@ -49,6 +49,9 @@
         </div>
     </section><!-- #call-to-action -->
     <br>
+    <section id="services">
+    	<div class="container">
+            <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <h1 class="userproposal-header">Contact Us</h1>
@@ -73,6 +76,9 @@
 				</form>
             </div>
             <div class="col-md-2"></div>
+        </div>
+    </div>
+   </section>
       <br>
 
 
