--- a/contactus.html
+++ b/contactus.html
@@ -29,7 +29,7 @@
           <div class="container-fluid">
       
             <div id="logo" class="pull-left">
-                <a href="" class="scrollto"><img src="airline/img/logo.jpg" width="70px" height="55px"></a>
+                <a href="" class="scrollto"><img src="airline/img/logo.png" width="70px" height="55px"></a>
             </div>
       
             <nav id="nav-menu-container">
@@ -55,7 +55,6 @@
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <h1 class="userproposal-header">Contact Us</h1>
-				<form action="" method="POST">
 					<div class="form-group">
 					<label class="text-info">Full Name</label>
 		    		<input type="text" name="name" class="form-control"  placeholder="Please enter your full name" />
@@ -72,8 +71,6 @@
                		 </div>
 
                   	<button class="btn btn-info btpro" type="submit" name="button">Send Message</button>
-
-				</form>
             </div>
             <div class="col-md-2"></div>
         </div>
