--- a/userdashboard.html
+++ b/userdashboard.html
@@ -29,7 +29,7 @@
           <div class="container-fluid">
       
             <div id="logo" class="pull-left">
-                <a href="" class="scrollto"><img src="airline/img/logo.jpg" width="70px" height="55px"></a>
+                <a href="" class="scrollto"><img src="airline/img/logo.png" width="70px" height="55px"></a>
             </div>
       
             <nav id="nav-menu-container">
