Profile Design Added.

--- a/flight/searchflight.html
+++ b/flight/searchflight.html
@@ -34,8 +34,8 @@
       
             <nav id="nav-menu-container">
               <ul class="nav-menu">
-                <li ><a href="userdashboard.html">User</a></li>
-                <li><a href="profile.html">Profile</a></li>
+                <li ><a href="../userdashboard.html">User</a></li>
+                <li><a href="../profile.html">Profile</a></li>
                 <li><a href="logout.html">Logout</a></li>
                 
               </ul>
