--- a/profile.html
+++ b/profile.html
@@ -45,37 +45,73 @@
 
     <section id="call-to-action" class="wow fadeIn">
         <div class="container text-center">
-        <h1>User Dashboard</h1>
+        <h1>User Profile</h1>
         </div>
     </section><!-- #call-to-action -->
     <br>
-    <section id="services">
-    	<div class="container">
-            <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-      <h1 class="userproposal-header">Contact Us</h1>
-					<div class="form-group">
-					<label class="text-info">Full Name</label>
-		    		<input type="text" name="name" class="form-control" />
-                	</div>
+	
+	<div class="profile-design">
+		<div class="row">
+			<div class="col-md-4">
+				<h6>Full Number</h6>
+			</div>
 
-		    		<div class="form-group">
-		    		<label class="text-info">Email Address</label>
-		    		<input type="email" name="email" class="form-control"/>
-                	</div>
+			<div class="col-md-4">
+				<div class="profile-date">
+					<p></p>
+				</div>
+			</div>
+		</div>
 
-		    		<div class="form-group">
-		    		<label class="text-info">Message To Us</label>
-                  	<textarea name="feedback" cols="40" rows="5" class="form-control"></textarea>
-               		 </div>
+		<div class="row">
+			<div class="col-md-4">
+				<h6>Phone Number</h6>
+			</div>
 
-                  	<button class="btn btn-info btpro" type="submit" name="button">Send Message</button>
-            </div>
-            <div class="col-md-2"></div>
+			<div class="col-md-4">
+				<div class="profile-date">
+					<p></p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-4">
+				<h6>Address</h6>
+			</div>
+
+			<div class="col-md-4">
+				<div class="profile-date">		
+					<p></p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-4">
+				<h6>Email</h6>
+			</div>
+
+			<div class="col-md-4">
+				<div class="profile-date">
+					<p></p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-4">
+				<h6>Image</h6>
+			</div>
+
+			<div class="col-md-4">
+				<div class="profile-date">
+					<p><img width="40" src=""/></p>
+				</div>
+			</div>
         </div>
-    </div>
-   </section>
+        <a href="" class="btn btn-primary">Edit Profile</a>
+	</div>
       <br>
 
 
