--- a/flight/bookingflight.html
+++ b/flight/bookingflight.html
@@ -93,6 +93,9 @@
             <label class="text-info">Email Address</label>
             <input type="email" name="email" class="form-control" />
           </div>
+          <div class="form-group">
+            <input type="submit" name="book" class="btn btn-info btn-md" value="Book Now">
+        </div>
           <div class="col-md-2"></div>
         </div>
       </div>
