--- a/flight/flightdetail.html
+++ b/flight/flightdetail.html
@@ -48,13 +48,47 @@
         <h1>Search Flight</h1>
         </div>
     </section><!-- #call-to-action -->
-    <br>
+
+    <div class="profile-design">
+      <div class="row">
+        <div class="col-md-4">
+          <h6 class="text-info">From</h6>
+        </div>
+  
+        <div class="col-md-4">
+          <div class="profile-date">
+            <p class="text-info"></p>
+          </div>
+        </div>
+      </div>
+  
+      <div class="row">
+        <div class="col-md-4">
+          <h6 class="text-info">TO</h6>
+        </div>
+  
+        <div class="col-md-4">
+          <div class="profile-date">
+            <p class="text-info"></p>
+          </div>
+        </div>
+      </div>
+  
+      <div class="row">
+        <div class="col-md-4">
+          <h6 class="text-info">Time</h6>
+        </div>
+  
+        <div class="col-md-4">
+          <div class="profile-date">		
+            <p class="text-info"></p>
+          </div>
+        </div>
+      </div>
     <div class="form-group">
         <input type="submit" name="countiue" class="btn btn-info btn-md" value="countiue">
     </div>
-      <br>
-
-
+    </div>
 </body>  
 
       <!-- JavaScript Libraries -->
