--- a/profile.html
+++ b/profile.html
@@ -44,64 +44,63 @@
         </header> 
 
     <section id="call-to-action" class="wow fadeIn">
-        <div class="container text-center">
+        <div class="container text-Addresscenter">
         <h1>User Profile</h1>
         </div>
     </section><!-- #call-to-action -->
-    <br>
 	
 	<div class="profile-design">
 		<div class="row">
 			<div class="col-md-4">
-				<h6>Full Number</h6>
+				<h6 class="text-info">Full Number</h6>
 			</div>
 
 			<div class="col-md-4">
 				<div class="profile-date">
-					<p></p>
+					<p class="text-info"></p>
 				</div>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-md-4">
-				<h6>Phone Number</h6>
+				<h6 class="text-info">Phone Number</h6>
 			</div>
 
 			<div class="col-md-4">
 				<div class="profile-date">
-					<p></p>
+					<p class="text-info"></p>
 				</div>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-md-4">
-				<h6>Address</h6>
+				<h6 class="text-info">Address</h6>
 			</div>
 
 			<div class="col-md-4">
 				<div class="profile-date">		
-					<p></p>
+					<p class="text-info"></p>
 				</div>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-md-4">
-				<h6>Email</h6>
+				<h6 class="text-info" >Email</h6>
 			</div>
 
 			<div class="col-md-4">
 				<div class="profile-date">
-					<p></p>
+					<p class="text-info"></p>
 				</div>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-md-4">
-				<h6>Image</h6>
+				<h6 class="text-info">Image</h6>
 			</div>
 
 			<div class="col-md-4">
@@ -112,7 +111,6 @@
         </div>
         <a href="" class="btn btn-primary">Edit Profile</a>
 	</div>
-      <br>
 
 
 </body>  
