--- a/contactus.html
+++ b/contactus.html
@@ -57,20 +57,20 @@
       <h1 class="userproposal-header">Contact Us</h1>
 					<div class="form-group">
 					<label class="text-info">Full Name</label>
-		    		<input type="text" id="cfullname" name="name" class="form-control" />
+		    		<input type="text" id="cname" name="cname" class="form-control" />
                 	</div>
 
 		    		<div class="form-group">
 		    		<label class="text-info">Email Address</label>
-		    		<input type="email" id="cemail" name="email" class="form-control"/>
+		    		<input type="email" id="cemail" name="cemail" class="form-control"/>
                 	</div>
 
 		    		<div class="form-group">
 		    		<label class="text-info">Message To Us</label>
-                  	<textarea id="cmessage" name="message" cols="40" rows="5" class="form-control"></textarea>
+                  	<textarea id="cmessage" name="cmessage" cols="40" rows="5" class="form-control"></textarea>
                		 </div>
 
-                  	<button class="btn btn-info btpro" id="" type="submit" name="button">Send Message</button>
+                  	<button class="btn btn-info btpro" id="csubmit" type="submit" name="csubmit">Send Message</button>
             </div>
             <div class="col-md-2"></div>
         </div>
@@ -99,6 +99,7 @@
 
   <!-- Template Main Javascript File -->
   <script src="airline/js/main.js"></script>
+  <script src="js/contactus.js"></script>
     
 </body>
 <footer id="footer">
